# the_nerd_hole

./: README.md
daylight-map/: README.md  index.html
daylight-map/css/: style.css
daylight-map/js/: app.js  cities.js  solar.js
infragraph/: .gitignore  README.md  pyproject.toml
infragraph/docs/: ARCHITECTURE.md
infragraph/examples/homelab/: docker-compose.yaml  hosts.yaml  nginx-proxies.yaml
infragraph/src/infragraph/: __init__.py
infragraph/src/infragraph/analyzers/: __init__.py  base.py  dependencies.py  exposure.py  spof.py
infragraph/src/infragraph/cli/: main.py
infragraph/src/infragraph/graph/: __init__.py  engine.py  model.py
infragraph/src/infragraph/parsers/: base.py  compose.py  inventory.py  nginx.py
infragraph/src/infragraph/renderers/: base.py  json_export.py  markdown.py  mermaid.py
infragraph/tests/: test_analyzers.py  test_compose_parser.py  test_graph_engine.py  test_inventory_parser.py  test_nginx_parser.py  test_renderers.py
